[gd_scene load_steps=4 format=3 uid="uid://dlbql6sehtwda"]

[ext_resource type="Script" path="res://scenes/telas/tela_fim_jogo.gd" id="1_2158g"]
[ext_resource type="TileSet" uid="uid://1liwl44tmlre" path="res://resources/tiles/tile_set_tela_vitoria.tres" id="2_giod8"]
[ext_resource type="FontFile" uid="uid://bm1yv0t6w54my" path="res://assets/fonts/title_font.ttf" id="3_nv1sa"]

[node name="TelaDerrota" type="CanvasLayer"]
script = ExtResource("1_2158g")

[node name="TileMap" type="TileMap" parent="."]
top_level = true
tile_set = ExtResource("2_giod8")
format = 2
layer_0/name = "Fundo"
layer_0/tile_data = PackedInt32Array(131074, 196617, 0, 196610, 196617, 1, 262146, 196617, 1, 327682, 196617, 1, 393218, 196617, 1, 458754, 196617, 1, 524290, 196617, 2, 393233, 327689, 1, 458769, 327689, 1, 524305, 327689, 2, 196625, 327689, 1, 262161, 327689, 1, 327697, 327689, 1, 131089, 327689, 0, 131075, 262153, 0, 131076, 262153, 0, 131077, 262153, 0, 131078, 262153, 0, 131079, 262153, 0, 131080, 262153, 0, 131081, 262153, 0, 131082, 262153, 0, 131083, 262153, 0, 131084, 262153, 0, 131085, 262153, 0, 131086, 262153, 0, 131087, 262153, 0, 131088, 262153, 0, 524291, 262153, 2, 524292, 262153, 2, 524293, 262153, 2, 524294, 262153, 2, 524301, 262153, 2, 524302, 262153, 2, 524303, 262153, 2, 524304, 262153, 2, 524300, 262153, 2, 524299, 262153, 2, 524298, 262153, 2, 524297, 262153, 2, 524296, 262153, 2, 524295, 262153, 2, 458755, 262153, 1, 393219, 262153, 1, 327683, 262153, 1, 327684, 262153, 1, 393220, 262153, 1, 393221, 262153, 1, 393222, 262153, 1, 393223, 262153, 1, 393224, 262153, 1, 393225, 262153, 1, 262155, 262153, 1, 262156, 262153, 1, 262157, 262153, 1, 262158, 262153, 1, 262159, 262153, 1, 327695, 262153, 1, 393231, 262153, 1, 393230, 262153, 1, 393229, 262153, 1, 393228, 262153, 1, 327692, 262153, 1, 196616, 262153, 1, 196615, 262153, 1, 262151, 262153, 1, 262150, 262153, 1, 262149, 262153, 1, 196613, 262153, 1, 196621, 262153, 1, 458765, 262153, 1, 458766, 262153, 1, 458767, 262153, 1, 393232, 262153, 1, 458768, 262153, 1, 196623, 262153, 1, 196624, 262153, 1, 262160, 262153, 1, 327696, 262153, 1, 327694, 262153, 1, 327693, 262153, 1, 196622, 262153, 1, 196620, 262153, 1, 196619, 262153, 1, 196618, 262153, 1, 196617, 262153, 1, 262154, 262153, 1, 327690, 262153, 1, 393226, 262153, 1, 327691, 262153, 1, 393227, 262153, 1, 458763, 262153, 1, 458764, 262153, 1, 458762, 262153, 1, 458761, 262153, 1, 458760, 262153, 1, 458759, 262153, 1, 458758, 262153, 1, 458757, 262153, 1, 458756, 262153, 1, 327685, 262153, 1, 327686, 262153, 1, 327687, 262153, 1, 327688, 262153, 1, 327689, 262153, 1, 262153, 262153, 1, 262152, 262153, 1, 196614, 262153, 1, 196612, 262153, 1, 196611, 262153, 1, 262147, 262153, 1, 262148, 262153, 1)
layer_1/name = "Piso"
layer_1/tile_data = PackedInt32Array(0, 65545, 1, 1, 65545, 1, 2, 65545, 1, 3, 65545, 1, 4, 65545, 1, 5, 65545, 1, 6, 65545, 1, 7, 65545, 1, 8, 65545, 1, 9, 65545, 1, 10, 65545, 1, 11, 65545, 1, 12, 65545, 1, 13, 65545, 1, 14, 65545, 1, 15, 65545, 1, 16, 65545, 1, 17, 65545, 1, 18, 65545, 1, 19, 65545, 1, 65555, 65545, 1, 131091, 65545, 1, 196627, 65545, 1, 262163, 65545, 1, 327699, 65545, 1, 393235, 65545, 1, 458771, 65545, 1, 524307, 65545, 1, 589843, 65545, 1, 655379, 65545, 1, 720915, 65545, 1, 720914, 65545, 1, 720913, 65545, 1, 720912, 65545, 1, 720911, 65545, 1, 720910, 65545, 1, 720909, 65545, 1, 720908, 65545, 1, 720907, 65545, 1, 720906, 65545, 1, 720905, 65545, 1, 720904, 65545, 1, 720903, 65545, 1, 720902, 65545, 1, 720901, 65545, 1, 720900, 65545, 1, 720899, 65545, 1, 720898, 65545, 1, 720897, 65545, 1, 720896, 65545, 1, 655360, 65545, 1, 655361, 65545, 1, 655362, 65545, 1, 655363, 65545, 1, 655364, 65545, 1, 655365, 65545, 1, 655366, 65545, 1, 655367, 65545, 1, 655368, 65545, 1, 655369, 65545, 1, 655370, 65545, 1, 655371, 65545, 1, 655372, 65545, 1, 655373, 65545, 1, 655374, 65545, 1, 655375, 65545, 1, 655376, 65545, 1, 655377, 65545, 1, 655378, 65545, 1, 589824, 65545, 1, 524288, 65545, 1, 458752, 65545, 1, 393216, 65545, 1, 131072, 65545, 1, 65536, 65545, 1, 196608, 65545, 1, 262144, 65545, 1, 327680, 65545, 1, 65554, 65545, 3, 65553, 65545, 2, 65552, 65545, 2, 65551, 65545, 2, 65550, 65545, 2, 589842, 65545, 4, 65537, 9, 3, 589825, 9, 4, 524289, 131081, 1, 458753, 131081, 1, 393217, 131081, 1, 327681, 131081, 1, 262145, 131081, 1, 196609, 131081, 1, 131073, 131081, 1, 131090, 9, 1, 196626, 9, 1, 262162, 9, 1, 327698, 9, 1, 393234, 9, 1, 458770, 9, 1, 524306, 9, 1, 589841, 65545, 0, 589840, 65545, 0, 589839, 65545, 0, 589838, 65545, 0, 589837, 65545, 0, 589836, 65545, 0, 589835, 65545, 0, 589834, 65545, 0, 589833, 65545, 0, 589832, 65545, 0, 589831, 65545, 0, 589830, 65545, 0, 589829, 65545, 0, 589828, 65545, 0, 589827, 65545, 0, 589826, 65545, 0, 65538, 65545, 2, 65539, 65545, 2, 65540, 65545, 2, 65541, 65545, 2, 65542, 65545, 2, 65543, 65545, 2, 65544, 65545, 2, 65545, 65545, 2, 65546, 65545, 2, 65547, 65545, 2, 65548, 65545, 2, 65549, 65545, 2, 524292, 327689, 4, 458758, 262153, 3, 458759, 327689, 3, 393229, 327689, 4, 196612, 262153, 3, 196613, 327689, 3, 458768, 327689, 4, 196623, 327689, 4, 327683, 327689, 4)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nv1sa")
theme_override_font_sizes/font_size = 26
text = "DERROTA!"
horizontal_alignment = 1

[node name="ButtonJogarNovamente" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nv1sa")
theme_override_font_sizes/font_size = 14
text = "JOGAR NOVAMENTE"

[node name="ButtonTelaPrincipal" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nv1sa")
theme_override_font_sizes/font_size = 14
text = "RETORNAR AO MENU PRINCIPAL"

[node name="ButtonSair" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nv1sa")
theme_override_font_sizes/font_size = 14
text = "SAIR"
